@@ -52,6 +52,7 @@ class Eucentricity(BaseSetup):
         sem.TiltTo(tilt)
         logging.info(f"Tilting to {tilt} deg.")
         x, y, z = sem.ReportStageXYZ()
+        sem.DriftWaitTask(5.0, "A", 180, 1, 1, "F")
         sem.AutoFocus(-1)
         defocus, *_ = sem.ReportAutoFocus()
         if sem.ReportMeanCounts("A") < 5:  # avoid grid bars
