@@ -2,6 +2,9 @@
     - afis # of checks reduced to 4
     - added frame alignment with SEM plugin, enabled for Young fringes and gold diffraction tests
     - configs updated
+    - reset img shifts at the start
+    - skip auto-stigmate very close to focus, because SEM will increase the defocus
+    - add wait for drift for eucentricity and tilt axis tests
 0.9.4:
     - add atlas realignment test
     - update Delay command
